--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,6 +6,8 @@ name: Python application
 on:
   push:
     branches: [ master ]
+    paths:
+    - 'src/backend/**'
   pull_request:
     branches: [ master ]
 
