Refactor code to improve readability and consistency.Update readme.

--- a/src/backend/.env.dev
+++ b/src/backend/.env.dev
@@ -3,3 +3,4 @@ DATABASE_URL=mysql://root:root@db:3306/todo
 SQL_HOST=db
 SQL_PORT=3306
 DATABASE=todo
+JWT_SECRET_KEY=Rt1NP63m4wnBg6nyHJhyGtfsr23YKfmc2TpCOGI4nsCSs
