--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,7 +12,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "^3.9.5",
     "universal-cookie": "^4.0.3"
   },
